...
        android:background="#ececec"
        android:focusableInTouchMode="true"
        android:visibility="visible">


        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp"
...
            android:alpha="0.3"
            android:scaleType="fitXY"
            android:src="@drawable/daily_view_list_item_tab_shadow_top"
            android:contentDescription="@null"/>

        <Button
            android:id="@+id/add_custom_med_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_list_item"
...
