...
        android:scaleType="fitXY"
        android:src="@drawable/daily_view_list_item_tab_shadow_top"
        android:contentDescription="@null"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allergies_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/touchable_white"
        android:clipToPadding="false"
        android:paddingBottom="96dp"/>
...
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:text="@string/allergies_placeholder"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fab_vertical_margin"
...
