...
<string name="remove_routine_message_long">"The routine %1$s has associated schedules that will be lost if you delete it. Do you want to remove it anyway?"</string>
<string name="remove_medicine_message_long">"%1$s has associated schedules that will be lost if you delete it. Do you want to remove it anyway?"</string>
<string name="remove_routine_message_short">"Remove %1$s routine?"</string>
<string name="remove_medicine_message_short">"Remove %1$s?"</string>
<string name="remove_routine_dialog_title">"Remove routine"</string>
<string name="remove_medicine_dialog_title">"Remove medicine"</string>
<string name="dialog_yes_option">"Yes"</string>
<string name="dialog_no_option">"No"</string>
<string name="medicine_no_name_error_message">"Please, type a name"</string>
<string name="medicine_no_presentation_error_message">"Please, select a presentation"</string>
<string name="tutorial_understood">"Got it"</string>
<string name="notification_repeat_message">"It will be repeated at %1$s"</string>
<string name="notification_cancel_now">"Cancel now"</string>
...
<string name="search_med_hint">"Search by name or code…"</string>
<string name="pref_header_prescriptions">"Medicine database"</string>
<string name="medicine_edit_name_hint">"Write here…"</string>
<string name="enable_prescriptions_dialog_message">"You can easily add medicines and view leaflets by enabling a medicine database. If you prefer not to do it, you can activate it later from the settings menu."</string>
<string name="enable_prescriptions_dialog_title">"Medicine database"</string>
<string name="enable_prescriptions_dialog_yes">"Activate (Recommended)"</string>
<string name="enable_prescriptions_dialog_no">"Cancel"</string>
<string name="driving_warning">"Taking this medicine may have effects on your ability to drive.
Please carefully read the leaflet or ask your pharmacist before you get behind the wheel."</string>
<string name="driving_warning_title">"Be careful"</string>
<string name="driving_warning_gotit">"Understood"</string>
<string name="repeat_every_tostr">"Every %1$s %2$s"</string>
<string name="schedule_limits_date_format">"MMMM dd, YYYY"</string>
...
<string name="stock_enough_for_upper_limit">"Enough for more than three months with current schedules"</string>
<string name="no_alerts_detected">"No alerts detected for this medicine"</string>
<string name="stock_depleted">"Stock is depleted"</string>
<string name="stock_depleted_msg">"There is no stock remaining for this medicine."</string>
<string name="message_allergies_experimental_warning">"Allergy management is an experimental feature. Remember to read the leaflets of your medicines to be sure of their allergy information."</string>
<string name="dialog_get_me_out">"Get me out of here!"</string>
<string name="dialog_continue_option">"Continue"</string>
<string name="important_info">"Important information"</string>
<string name="download_db_dialog_title">"Setup med database"</string>
<string name="download_db_dialog_message">"The database will be downloaded and configured. This may take a few seconds, but you can continue using the application in the meantime."</string>
<string name="download_db_unexpected_error">"Error setting up database"</string>
<string name="install_db_notification_title">"Setting up database"</string>
<string name="install_db_notification_ticker">"Setting up database"</string>
...
